[tool.poetry]
name = "aoc2023"
version = "1.0.0"
description = "Advent of Code 2023 in Python"
authors = ["Brandon Kreisel <bkreisel@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.0"

[tool.poetry.scripts]
aoc-scaffold = "aoc2023.scaffold:scaffold_cli"
aoc-run = "aoc2023.run:run_cli"
aoc-test = "aoc2023.test:test_cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "F",	# Pyflakes
    "E","W",  # pycodestyle
    "C90",	# mccabe
    "I",	# isort
    "N",	# pep8-naming
    "UP",	# pyupgrade
    "BLE",	# flake8-blind-except
    "FBT",	# flake8-boolean-trap
    "A",	# flake8-builtins
    "COM",	# flake8-commas
    "C4",	# flake8-comprehensions
    "ICN",	# flake8-import-conventions
    "T20",	# flake8-print
    "PL",	# Pylint
    "TRY",	# tryceratops
    "RUF",	# Ruff-specificrules
]